9th commit API arrangement

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31" >
         <activity
-            android:name=".CoinActivity"
+            android:name=".featurse.CoinActivity"
             android:exported="false" />
         <activity
-            android:name=".MarketActivity"
+            android:name=".featurse.MarketActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
