10th commit code Market Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".featurse.CoinActivity"
             android:exported="false" />
         <activity
-            android:name=".featurse.MarketActivity"
+            android:name=".featurse.market.MarketActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
